# sp-ros

./: .gitignore  LICENSE  README.md
sp_rust_ui/: CMakeLists.txt  Cargo.toml
sp_rust_ui/src/: main.rs
sp_ui/sp_ui/: main.py
src/rust_ui/: CMakeLists.txt  package.xml
src/rust_ui/src/: main.rs
src/sp_messages/: CMakeLists.txt  package.xml
src/sp_messages/action/: Json.action
src/sp_messages/msg/: RegisterResource.msg  Resource.msg  Resources.msg
src/sp_messages/srv/: Json.srv
src/sp_rust_ui/: CMakeLists.txt  package.xml
src/sp_ui/: package.xml
src/sp_ui/sp_ui/: main.py
