[package]
name = "sp-rust-ui"
version = "0.1.0"
authors = ["Kristofer Bengtsson <kristofer.bengtsson@chalmers.se>"]
edition = "2018"

[dependencies]
r2r = { git = "https://github.com/sequenceplanner/r2r", version = "0.2.0" }
futures = "0.3.15"
tokio = { version = "1", features = ["full"] }
sp-domain = { git = "https://github.com/sequenceplanner/sp-rust", branch = "actions" }
serde_json = "1.0"
fltk = "1"
fltk-theme = "0.1"
